---
title: Abstract Property
---
classDiagram
    direction LR

    class AbstractProperty {
        <<Abstract>>
        -string name
        -string value
        +getName() string
        +setName(string)
        +getValue() ?string
        +setValue(mixed)
        +getArray() ?array
        +setArray(?array)
        +getBoolean() bool
        +setBoolean(bool)
        +getDate() ?DatePoint
        +setDate(?DatePoint)
        +getFloat() float
        +setFloat(float)
        +getInteger() int
        +setInteger(int)
        +setString(?string)
    }

    class EntityInterface {
        <<Interface>>
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class UserProperty {
        -User user
        +getUser() User
        +setUser(User)
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- AbstractProperty
    AbstractProperty <|-- GlobalProperty
    AbstractProperty <|-- UserProperty
    User "0" --* "*" UserProperty

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click User call nodeCallback()
